--- a/Open_Me.html
+++ b/Open_Me.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Công Chúa Của Anh</title>
+<title>Lê Thị Thanh Bình</title>
 
 <style>
     body{
@@ -41,8 +41,8 @@
     }
 
     /* Responsive chữ */
-    #text1{ font-size: clamp(28px,6vw,52px); }
-    #text2{ font-size: clamp(26px,5vw,46px); }
+    #text1{ font-size: clamp(26px, 5vw + 10px, 60px); }
+    #text2{ font-size: clamp(24px, 4vw + 10px, 52px); }
 
 </style>
 </head>
@@ -53,11 +53,6 @@
 <div id="text2" class="text">Happy New Year</div>
 
 <script>
-/* Autoplay mobile workaround */
-document.addEventListener("click",()=>{
-    audio.play().catch(()=>{});
-},{once:true});
-
 /* ====== RESPONSIVE ====== */
 let W = window.innerWidth;
 let H = window.innerHeight;
@@ -67,13 +62,13 @@ let centerY = H/2;
 
 /* Giảm hạt trên mobile */
 const isMobile = W < 768;
-const TOTAL = isMobile ? 500 : 900;
+const TOTAL = isMobile ? 350 : 600;
 
 const particles=[];
 const targets=[];
 
 /* ====== TẠO HẠT ====== */
-for(let i=0;i<TOTAL;i++){
+for(let i = 0; i < TOTAL; i++){
     const s=document.createElement("span");
     s.className="particle";
 
@@ -137,13 +132,13 @@ let growing=true;
 
 function heartbeat(){
 
-    if(beatCount>=3){
+    if(beatCount>=4){
         explode();
         return;
     }
 
-    if(growing) scaleBeat+=0.02;
-    else scaleBeat-=0.02;
+    if(growing) scaleBeat+=0.008;
+    else scaleBeat-=0.008;
 
     if(scaleBeat>=1.25) growing=false;
     if(scaleBeat<=1){
@@ -168,8 +163,8 @@ function heartbeat(){
 function explode(){
 
     particles.forEach(p=>{
-        p.vx=(Math.random()-0.5)*12;
-        p.vy=(Math.random()-0.5)*12;
+        p.vx=(Math.random()-0.5)*8;
+        p.vy=(Math.random()-0.5)*8;
     });
 
     function frame(){
